# necs

./: CMakeLists.txt  README.md
include/necs/: CEntityFactory.h  CMatrixAllocator.h  CPagedAllocator.h  CWorldObject.h  IAlignedAllocator.h  IAllocator.h  IEntityFactory.h  IIDGenerator.h  IPagedAllocator.h  IWorldObjectCDO.h
src/necs/: CWorldObject.cpp
tests/: CMakeLists.txt  Readme.md
tests/src/: main.cpp
